--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,124 @@ body {
     text-transform: uppercase;
     margin-right: 10px;
 }
+
+/* Header End */
+
+/* First Start */
+
+.first {
+    position: relative;
+    min-height: 750px;
+    margin-bottom: 150px;
+
+    color: white;
+
+}
+
+.first__img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: bisque;
+}
+
+.first__img img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.first__column {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.first__content {
+    padding-top: 150px;
+    margin-right: 134px;
+
+    max-width: 350px;
+}
+
+.first__title {
+    font-family: PT Sans;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 140%; /* 70px */
+    width: 526px;;
+}
+
+.first__text {
+    font-family: PT Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+    max-width: 322px;
+}
+
+.first__about {
+    display: flex;
+}
+
+.first__about h3 {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 140%; /* 22.4px */
+    letter-spacing: 1.6px;
+    text-transform: uppercase; 
+    margin-right: 10px;
+
+    position: relative;
+}
+
+
+.first__about h3::before {
+    position: absolute;
+    content: "";
+    background-image: url(../img/section-01/ellipse.svg);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    left: 120px;
+    bottom: 3px;
+    z-index: 100;
+    border: none;
+}
+
+.first__blocks {
+    margin-top: 110px;
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+}
+
+.first__card {
+    width: 306px;
+    background-color: #5DB7DE;
+    border-radius: 20px;
+    
+}
+
+.card__title {
+    padding: 30px 35px 118px;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 140%; /* 18.2px */
+    letter-spacing: 1.3px;
+    text-transform: uppercase;
+}
+
+.card__text {
+    margin: 0 35px 30px;
+
+    font-size: 19px;
+    font-weight: 700;
+    line-height: 140%; /* 26.6px */
+}
