--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,10 @@ body {
 
 /* Serivce Start */
 
+.service {
+    margin-bottom: 200px;
+}
+
 .service__wrapper {
     display: flex;
     
@@ -292,3 +296,103 @@ body {
 /* Service End */
 
 
+
+/* About Start */
+
+
+.about {
+
+}
+
+.about__title {
+    color: #333;
+    
+ 
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 140%; /* 56px */
+}
+
+.about__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about__content {
+    width: 636px;
+    color: #333;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+}
+
+.about__live {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.about__video {
+    position: relative;
+    width: 526px;
+    height: 350px;
+    
+}
+
+.about__img {
+
+    object-fit: cover;
+    background-repeat: no-repeat;
+    z-index: -1;
+
+    border-radius: 20px;
+}
+
+.about__video::after {
+    position: absolute;
+    content: "";
+    width: 80px;
+    height: 80px;
+    left: 45%;
+    bottom: 40%;
+    
+
+    background-image: url(../img/about/play.svg);
+    background-repeat: no-repeat;
+
+    z-index: 10;
+    cursor: pointer;
+}
+
+.about__card {
+    color: #fff;
+    display: flex;
+    width: 526px;
+    padding: 30px 35px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 38px;
+
+    border-radius: 20px;
+    background: #5DB7DE;
+}
+
+.about__card-title {
+
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 140%; /* 18.2px */
+    letter-spacing: 1.3px;
+    text-transform: uppercase;
+}
+
+.about__card-text {
+    font-size: 19px;
+    font-weight: 700;
+    line-height: 140%; /* 26.6px */
+}
+
+/* About End */
